# GeMU

./: LICENSE  README.md  pyproject.toml  setup.py
src/GeMU/: __init__.py  soc.py
tests/: example.py
